--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button onclick="reset()" id="reset">Reset</button>
             <button onclick="addTime('yellow')" id="yellow">Yellow+</button>
             <button onclick="addTime('red')" id="red">Red+</button>
-            <button onclick="counters()" id="resetFrame">Reset Frame</button>
+            <button onclick="resetFrame()" id="resetFrame">Reset Frame</button>
         </section>
     </main>
 
