--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <div id="mode">
             <button id="modeBtn">Colour mode</button>
         </div>
+        <div id="beg">
+            <button id="begBtn" onclick="beginning()">Timer options</button>
+        </div>
         <div id="copyright">
             &#169; Rack 'n'Beard - All materials are either the intellectual and real property of Rack 'n' Beard productions or used with permission
         </div>
