Add launch screen with continue button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Rack 'n' Beard
         </div>
         <div id="slogan">
-            Take a shot, you're on the clock!
+            Competitive pool shot timers
         </div>
         <div id="sponsor">
                 <img src="assets/images/Cousins-logo-bw.webp" alt="Cousins Snooker and Pool club logo - sponsors" name="secondaryLogo" id="sponsorImg">
@@ -25,6 +25,11 @@
     </header>
 
     <main id="main">
+
+        <section id="welcome">
+            <div id="spiel"><h1>Welcome to the Rack 'n' Beard timers</h1></div>
+            <button onclick="cont()" id="continue">Continue</button>
+        </section>
         
         <section id="home">
             <div id="disOpts">Select your length of shot clock</div>
